# prismlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  info.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  gemini_client.py  metrics.py  report.py  run_all.py  runner.py
benchmarks/domains/: finance.py  healthcare.py  trade_market.py
benchmarks/sql/: schema.sql  seed_data.sql
demo/: graph.py  taxonomy_config.py
docs/: ARCHITECTURE.md  BENCHMARK.md  LAUNCH_EMAIL.md  RELEASE_CHECKLIST.md  SECURITY.md  ai-overview.md  index.md  llm-context.md
docs/api/: checkpointers.md  exceptions.md  middleware.md  projector.md  taxonomy.md
prismlang/: __init__.py  checkpointer.py  config.py  encoder.py  envelope.py  exceptions.py  middleware.py  projector.py  state.py  taxonomy.py  translator.py
tests/: test_encoder.py  test_isolation.py  test_projector.py  test_state.py
